# HPC_FinalProject

./: .gitignore  README.md
exercise1/: EPYC_allocation.sh  README.md  bcast_performance.sh  bcast_plot.ipynb  compile_OSU-THIN.sh  compile_OSU.sh  slurm-339816.out  slurm-339817.out  slurm-339818.out
exercise1/barrier/barrier_bruck/: barrier_bruck_getdata.sh
exercise1/barrier/barrier_default/: barrier_default_getdata.sh
exercise1/barrier/barrier_doublering/: barrier_doublering_getdata.sh
exercise1/barrier/barrier_linear/: barrier_linear_getdata.sh
exercise1/barrier/barrier_recursivedoubling/: barrier_recursivedoubling_getdata.sh
exercise1/barrier/barrier_tree/: barrier_tree_getdata.sh
exercise1/barrier/results_barrier/: analysis.Rmd  barrier_analysis.Rmd  barrier_analysis.html
exercise1/barrier_THIN/barrier_bruck/: barrier_bruck_getdata.sh
exercise1/barrier_THIN/barrier_default/: barrier_default_getdata.sh
exercise1/barrier_THIN/barrier_doublering/: barrier_doublering_getdata.sh
exercise1/barrier_THIN/barrier_linear/: barrier_default_getdata.sh  barrier_linear_getdata.sh
exercise1/barrier_THIN/barrier_recursivedoubling/: barrier_recursivedoubling_getdata.sh
exercise1/barrier_THIN/barrier_results/: analysis.Rmd  analysis.html  barrier_doublering.csv  barrier_linear.csv
exercise1/barrier_THIN/barrier_tree/: barrier_tree_getdata.sh
exercise1/bcast/bcast_binarytree/: bcast_binarytree.sh  bcast_binarytree_complete.sh  bcast_binarytree_complete_getdata.sh  bcast_binarytree_get192.sh
exercise1/bcast/bcast_chain/: bcast_chain.sh  bcast_chain_complete.sh  bcast_chain_complete_getdata.sh  bcast_chain_get192.sh
exercise1/bcast/bcast_default/: bcast_default.sh  bcast_default_complete.sh  bcast_default_complete_getdata.sh  bcast_default_get192.sh
exercise1/bcast/bcast_linear/: bcast_linear.sh  bcast_linear_complete.sh  bcast_linear_complete_getdata.sh  bcast_linear_get192.sh
exercise1/bcast/bcast_plots/: .Rhistory  compare_algs.ipynb
exercise1/bcast/bcast_results/: algs_comparison.ipynb  bcast_binarytree.csv  bcast_binarytree_complete.csv  bcast_chain.csv  bcast_chain_complete.csv  bcast_default.csv  bcast_default_complete.csv  bcast_linear.csv  bcast_linear_complete.csv  bcast_standard.csv
exercise1/bcast/bcast_standard/: bcast_standard.sh
exercise1/bcast/results_bcast/: README.md  bcast_analysis.Rmd  bcast_linear.csv
exercise1/bcast_EPYC/bcast_binarytree/: bcast_binarytree.sh  bcast_binarytree_complete_getdata.sh
exercise1/bcast_EPYC/bcast_chain/: bcast_chain_complete_getdata.sh
exercise1/report_backup/: bibliography.bib  main.tex
exercise1/results/: bcast_performance.csv
exercise1/task/: exercise1.md
exercise2/: CMakeLists.txt  EPYC_allocation.sh  MPI_bcast.c  README.md
exercise2/apps/: get_timings.sh  main.c  main_psrs.c  mpi_scaling.sh  omp_scaling.out  omp_scaling.sh  psrs_scaling.sh
exercise2/distributed/: bcast_Chain.sh  bcast_Chain_corecore.sh  bcast_Chain_numa_core.sh  bcast_Default.sh  bcast_Default_corecore.sh  bcast_FlatTree.sh  bcast_FlatTree_Hybrid.sh  bcast_FlatTree_corecore.sh
exercise2/distributed/results/: bcast_Chain.csv  bcast_Chain_numa_core.csv  bcast_Default.csv  bcast_FlatTree.csv  scalability.ipynb
exercise2/distributed/results/corecore/: README.md  bcast_Chain_corecore.csv  bcast_Default_corecore.csv  bcast_FlatTree_corecore.csv
exercise2/distributed/results/default_mapping/: bcast_Chain.csv
exercise2/distributed/src/: bcast_Chain.c  bcast_FlatTree.c  bcast_FlatTree_Hybrid.c
exercise2/ex2A/distributed/: bcast_Chain.sh  bcast_Default.sh
exercise2/ex2A/distributed/results/default_mapping/: bcast_FlatTree.csv  scalability.ipynb
exercise2/ex2A/distributed/src/: bcast_Default.c
exercise2/ex2B/: CMakeLists.txt  build.sh  compile.sh  mpi_run.sh  omp_run.sh  omp_scalability.out  quick.c  quick_mpi  quick_mpi.c  quick_mpi.cpp  quick_mpi_merge.c  run.sh  serial_run.sh  times_100000.out  times_comparison.sh
exercise2/ex2B/CMake_tests/: CMakeLists.txt  build.sh  build_out.out  main.c
exercise2/ex2B/CMake_tests/apps/: get_timings.sh  out_times.out
exercise2/ex2B/CMake_tests/exe/: out_times.out  times_comparison.sh
exercise2/ex2B/CMake_tests/include/: quick_mpi.h
exercise2/ex2B/CMake_tests/source/: quick_mpi.c
exercise2/ex2B/apps/: get_timings.sh  main.c  main.x  main_ale.c
exercise2/ex2B/include/: quick_mpi.h
exercise2/ex2B/source/: quick_mpi.c
exercise2/ex2B/test/: compile.sh  main.c
exercise2/ex2B/test/include/: quick_mpi.h
exercise2/ex2B/test/source/: quick_mpi.c
exercise2/ex2B/timings/: omp_scaling_640M.csv  omp_scaling_L1.csv  timings_64M.csv
exercise2/exercise2a/distributed/: bcast_Chain_corecore.sh  bcast_FlatTree_corecore.sh
exercise2/exercise2a/distributed/results/: bcast_Chain.csv  bcast_Chain_corecore.csv  bcast_Default.csv
exercise2/exercise2a/distributed/results/corecore/: bcast_Default_corecore.csv
exercise2/exercise2a/distributed/src/: bcast_Chain.c
exercise2/exercise2b/: quick  quick.c
exercise2/include/: hybrid_qsort.h  quick_mpi.h
exercise2/scalability/: MPI_scalability.Rmd  MPI_scalability.html  OMP_scalability.Rmd  OMP_scalability.html  scalability_analysis.Rmd  scalability_analysis.html
exercise2/source/: hybrid_qsort.c  psrs.c  quick_mpi.c  quicksort.c
exercise2/timings/: MPI_strong.sh  MPI_strong_160M.csv  MPI_strong_160M_1-64.csv  MPI_weak.sh  MPI_weak_160M.csv  MPI_weak_160M_1-64.csv  StrongScalability_160M_65-128.csv  WeakScalability_160M_65-128.csv  getdata_omp.sh  getdata_strong.sh  getdata_weak.sh  hybrid_scaling_240M.csv  hybrid_scaling_240M_1thread.csv  hybrid_scaling_240M_2threads.csv  hybrid_scaling_240M_4threads.csv  hybrid_scaling_240M_8thread.csv  hybrid_scaling_240M_8threads.csv  mpi-scalability.R  mpi_scaling.csv  mpi_scaling.sh  omp-scalability.R  omp_L1_640M.csv  omp_scaling.csv  omp_scaling.sh  omp_scaling_640M.csv  omp_scaling_L1.csv  omp_scaling_L1_640M.csv  omp_scaling_LessSize.csv  omp_scaling_LessSize_L1.csv  omp_scaling_old.csv  omp_standard_640M.csv  threads_scaling_160M.csv  threads_scaling_160M.sh
(+68 files in other folders)
